# serpentine

./: .gitignore  .trivyignore.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.hbs  about.toml  build.rs  clippy.toml  containerd.Dockerfile  deny.toml  flake.nix  justfile  main.snek  result
.config/: nextest.toml
.github/workflows/: security.yml  test.yml
book/: .gitignore  book.toml
book/src/: SUMMARY.md  caching.md  caching_internal.md  ci.md  cli.md  containerd.md  dockerfile.md  examples.md  getting_started.md  prelude.md  security.md  sidecar.md  snek.md
book/theme/: highlight.js
ci/: build.snek  cargo_vet_downgrade.sh  cargo_vet_improvements.sh  cargo_vet_unneeded_trusts.sh  lib.snek  lints.snek  main.snek  other.snek  tests.snek
proptest-regressions/engine/: cache.txt
proptest-regressions/snek/: mod.txt  tokenizer.txt
serpentine/: Cargo.toml
serpentine/proptest-regressions/engine/: cache.txt
serpentine/src/: main.rs  tui.rs
serpentine/src/engine/: cache.rs  containerd.rs  data_model.rs  docker.rs  filesystem.rs  mod.rs  nodes.rs  scheduler.rs  sidecar_client.rs  userdb.rs
serpentine/src/snapshots/: serpentine__tests__command_fail.snek.snap  serpentine__tests__command_fail_deduplicated.snek.snap  serpentine__tests__command_fail_function.snek.snap  serpentine__tests__command_fail_multi_line.snek.snap
serpentine/src/snek/: compiler.rs  mod.rs  parser.rs  resolver.rs  span.rs  tokenizer.rs
serpentine/src/snek/snapshots/: serpentine__snek__tests__argument_mismatch_builtin.snek.snap  serpentine__snek__tests__argument_mismatch_custom.snek.snap  serpentine__snek__tests__double_return.snek.snap  serpentine__snek__tests__error_in_import.snek.snap  serpentine__snek__tests__export_function_in_function.snek.snap  serpentine__snek__tests__export_import_in_function.snek.snap  serpentine__snek__tests__import_not_found.snek.snap  serpentine__snek__tests__item_not_found.snek.snap  serpentine__snek__tests__item_not_found_import.snek.snap  serpentine__snek__tests__join_wrong_type.snek.snap  serpentine__snek__tests__missing_separator.snek.snap  serpentine__snek__tests__missing_separator.snek.snap.new  serpentine__snek__tests__missing_seperator.snek.snap.new  serpentine__snek__tests__recursive_import_1.snek.snap  serpentine__snek__tests__recursive_import_2.snek.snap  serpentine__snek__tests__services_exec_container_still_container.snek.snap  serpentine__snek__tests__services_not_service.snek.snap  serpentine__snek__tests__type_mismatch_builtin.snek.snap  serpentine__snek__tests__type_mismatch_custom.snek.snap  serpentine__snek__tests__unexpected_eof.snek.snap  serpentine__snek__tests__unexpected_token.snek.snap  serpentine__snek__tests__unterminted_string.snek.snap
serpentine_internal/: Cargo.toml
serpentine_internal/src/: lib.rs  network.rs  sidecar.rs
serpentine_internal/src/nodes/: README.md  mod.rs  shell_escape.rs
serpentine_sidecar/: Cargo.toml
serpentine_sidecar/src/: main.rs
sidecar/: Cargo.toml
sidecar/src/: main.rs
src/: docker.rs  main.rs  tui.rs
src/docker/: mod.rs
src/engine/: cache.rs  containerd.rs  data_model.rs  docker.rs  mod.rs  nodes.rs  scheduler.rs
src/snek/: ast.rs  compiler.rs  ir.rs  mod.rs  parser.rs  resolver.rs  span.rs  tokenizer.rs
src/snek/snapshots/: serpentine__snek__tests__argument_mismatch_builtin.snek.snap  serpentine__snek__tests__argument_mismatch_custom.snek.snap  serpentine__snek__tests__default_not_label.snek.snap  serpentine__snek__tests__double_return.snek.snap  serpentine__snek__tests__error_in_import.snek.snap  serpentine__snek__tests__export_function_in_function.snek.snap  serpentine__snek__tests__export_import_in_function.snek.snap  serpentine__snek__tests__export_in_function.snek.snap  serpentine__snek__tests__forward_reference_label.snek.snap.new  serpentine__snek__tests__import_not_found.snek.snap  serpentine__snek__tests__item_not_found.snek.snap  serpentine__snek__tests__item_not_found_import.snek.snap  serpentine__snek__tests__item_wrong_kind.snek.snap  serpentine__snek__tests__no_export.snek.snap  serpentine__snek__tests__no_return.snek.snap  serpentine__snek__tests__recursion.snek.snap  serpentine__snek__tests__recursive_import_2.snek.snap  serpentine__snek__tests__return_in_top_level.snek.snap  serpentine__snek__tests__shadow_in_function.snek.snap  serpentine__snek__tests__shadowing.snek.snap  serpentine__snek__tests__type_mismatch_builtin.snek.snap  serpentine__snek__tests__type_mismatch_custom.snek.snap  serpentine__snek__tests__unknown_char.snek.snap
supply-chain/: audits.toml  config.toml
test_cases/: cache_test.snek  lib.snek  lib2.snek
test_cases/bench/: large.snek  lib_helpers.snek  small.snek
test_cases/live/: combine_strings.snek  copy_from_container.snek  copy_from_host.snek  corrupting_path.snek  cross_arch.snek  custom_services.snek  duplication.snek  services.snek  set_user.snek  string_escapes.snek
test_cases/live_negative/: command_fail.snek  command_fail_deduplicated.snek  command_fail_function.snek  command_fail_multi_line.snek
test_cases/negative/: argument_mismatch_builtin.snek  argument_mismatch_custom.snek  default_not_label.snek  double_return.snek  export_function_in_function.snek  export_import_in_function.snek  export_in_function.snek  item_not_found.snek  item_not_found_import.snek  item_wrong_kind.snek  join_wrong_type.snek  no_return.snek  recursion.snek  rescurive_import_1.snek  rescurive_import_2.snek  return_in_top_level.snek  shadow_in_function.snek  shadowing.snek  type_mismatch_builtin.snek  type_mismatch_custom.snek
test_cases/negative/compiler/: argument_mismatch_builtin.snek  argument_mismatch_custom.snek  default_not_export.snek  double_return.snek  error_in_import.snek  import_not_found.snek  item_wrong_kind.snek  (+7 more)
test_cases/positive/: chain.snek  comments.snek  forward_reference_label.snek  forward_referenced_function.snek  function.snek  import_from_function.snek  importing.snek  label.snek  literal_deduplicate_between_functions.snek  phantom_inputs.snek  services.snek  simple_expression.snek  unknown_escape.snek
(+6 files in other folders)
