[package]
name = "serpentine"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Powerful simplistic workflow runner."
license = "MIT"
keywords = ["docker", "containers", "build-system", "testing", "CI"]
categories = ["command-line-utilities", "compilers", "development-tools::build-utils", "development-tools::testing", "virtualization"]
repository = "https://github.com/Serpent-Tools/serpentine"

[dependencies]
serpentine_internal = {version="=0.1.0", path="../serpentine_internal"}

# Runtime
shell-words = "1.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
ignore = "0.4.23"
tokio = { version = "1.48.0", default-features = false, features = ["rt", "fs", "signal"] }
futures-util = { version = "0.3.31", default-features = false }
bollard = { version = "0.19.3", default-features = false, features = ["http", "pipe"] }
async-tar = { version = "0.5.1", default-features = false }
containerd-client = { version = "0.8.0", default-features = false }
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.145"
oci-spec = { version = "0.8.3", default-features = false, features = ["runtime"] }
prost-types = "0.13"
tokio-util = { version = "0.7.17", features = ["rt"] }
tower = { version = "0.5.2", default-features = false }
async-compat = "0.2.5"
blake3 = "1.8.2"

# Compiler
bumpalo = { version = "3.19.0", default-features = false, features = ["collections"] }

# UX
thiserror = "2.0.16"
strip-ansi-escapes = "0.2.1"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = "0.29.0"
clap = { version = "4.5.47", features = ["derive"] }
directories = { version = "6.0.0", default-features = false }
fern = { version = "0.7.1", default-features = false }
layout-rs = "0.1.3"
ctrlc = "3.5.1"
heapless = "0.9.2"
hyper-util = "0.1.19"
nohash = "0.2.0"

[dev-dependencies]
tempfile = "3.23.0"
insta = { version = "1.43.2", features = ["filters"] }
proptest = { version = "1.8.0", features = ["attr-macro"] }
proptest-derive = "0.7.0"
rstest = "0.26.1"
test-log = "0.2.18"
tokio = { version = "1.48.0", default-features = false, features = ["macros", "test-util"] }

[features]
default = []
_test_docker = []

[lints]
workspace = true
