[package]
name = "serpentine"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Powerful simplistic workflow runner."
license = "MIT"
keywords = ["docker", "containers", "build-system", "testing", "CI"]
categories = ["command-line-utilities", "compilers", "development-tools::build-utils", "development-tools::testing", "virtualization"]
repository = "https://github.com/Serpent-Tools/serpentine"

[dependencies]
serpentine_internal = {version="=0.1.0", path="../serpentine_internal"}

# Runtime
shell-words = "1.1.1"
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.49.0", default-features = false, features = ["rt", "fs", "signal"] }
futures-util = { version = "0.3.31", default-features = false }
bollard = { version = "0.20.1", default-features = false, features = ["http", "pipe"] }
containerd-client = { version = "0.8.0", default-features = false }
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.149"
oci-spec = { version = "0.8.4", default-features = false, features = ["runtime"] }
prost-types = "0.13"
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5.3", default-features = false }
blake3 = "1.8.3"

# Compiler
bumpalo = { version = "3.19.1", default-features = false, features = ["collections"] }

# UX
thiserror = "2.0.18"
strip-ansi-escapes = "0.2.1"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = "0.29.0"
clap = { version = "4.5.57", features = ["derive"] }
directories = { version = "6.0.0", default-features = false }
fern = { version = "0.7.1", default-features = false }
layout-rs = "0.1.3"
heapless = "0.9.2"
hyper-util = "0.1.20"
nohash = "0.2.0"
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.24.0"
insta = { version = "1.46.3", features = ["filters"] }
proptest = { version = "1.10.0", features = ["attr-macro"] }
proptest-derive = "0.7.0"
rstest = "0.26.1"
test-log = "0.2.19"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "test-util"] }

[features]
default = []
_test_docker = []

[lints]
workspace = true
