[package]
name = "serpentine"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Powerful simplistic workflow runner."
license = "MIT"
keywords = ["docker", "containers", "build-system", "testing", "CI"]
categories = ["command-line-utilities", "compilers", "development-tools::build-utils", "development-tools::testing", "virtualization"]
repository = "https://github.com/Serpent-Tools/serpentine"

[dependencies]
serpentine_internal.workspace = true

# Runtime
shell-words = "1.1.1"
uuid.workspace = true
tokio = { workspace = true, features = ["rt", "fs", "signal"] }
futures-util = { version = "0.3.32", default-features = false }
bollard = { version = "0.20.2", default-features = false, features = ["http", "pipe"] }
containerd-client = { version = "0.8.0", default-features = false }

oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
oci-spec = { version = "0.8.4", default-features = false, features = ["runtime"] }
prost-types = { version = "0.13", default-features = false }
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }
tower = { version = "0.5.3", default-features = false }
blake3 = { version = "1.8.3", default-features = false }
typed-path = { version = "0.12.3", default-features = false }
im-rc = { version = "15.1.0", default-features = false }
ignore = { version = "0.4.25", default-features = false }

# Compiler
bumpalo = { version = "3.20.2", default-features = false, features = ["collections"] }

# UX
thiserror = { version = "2.0.18", default-features = false }
strip-ansi-escapes = { version = "0.2.1", default-features = false }
log.workspace = true
miette = { version = "7.6.0", default-features = false, features = ["derive", "fancy-no-backtrace"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
clap = { version = "4.6.0", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
directories = { version = "6.0.0", default-features = false }
fern = { version = "0.7.1", default-features = false }
heapless = { version = "0.9.2", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }
nohash = { version = "0.2.0", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = { version = "3.27.0", default-features = false }
insta = { version = "1.46.3", default-features = false, features = ["filters"] }
proptest.workspace = true
proptest-derive.workspace = true
rstest.workspace = true
test-log = { version = "0.2.19", default-features = false }
tokio = { workspace = true, features = ["macros", "test-util"] }
im-rc = { version = "15.1.0", features = ["proptest"] }

[features]
default = []
_test_docker = []

[lints]
workspace = true
