[package]
name = "serpentine_internal"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "internal shared library for serpentine"
license = "MIT"
repository = "https://github.com/Serpent-Tools/serpentine"
keywords = ["internal"]
categories = ["rust-patterns"]

[dependencies]
tokio = { workspace = true, features = ["io-util", "fs"] }
log.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
rstest.workspace = true

[lints]
workspace = true
