[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
serpentine_internal.workspace = true

log.workspace = true
simple_logger = { version = "5.2.0", default-features = false }
tokio = { workspace = true, features = ["rt", "net", "io-util", "fs"] }
nix = { version = "0.30.1", default-features = false, features = ["fs", "mount"] }
uuid.workspace = true
rust-cni = { version = "0.1.2", default-features = false }
netns-rs = { version = "0.1.0", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["os_rng", "std"] }

[lints]
workspace = true
